created graphs for the data section

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -22,13 +22,13 @@
   }  
   
   
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
+@Misc{cite538,
+  author = {FiveThirtyEight},
+  title = {2024 National Presidential Polls},
+  year = {2024},
+  url = {https://projects.fivethirtyeight.com/polls/president-general/2024/national/},
+  note = {Accessed: 2024-10-19}
+} 
   
   
 @article{gebru2021datasheets,
